feat(group): fetch permissions internally
