# docs/swagger.yaml
@@ -193,6 +193,44 @@ paths:
         a new password.
       tags:
       - Authentication
+  /groups/permissions:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Sign Up Payload
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/contracts.SignUpRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Account Created
+          schema:
+            $ref: '#/definitions/contracts.AuthResponse'
+        "400":
+          description: Invalid parameters
+          schema:
+            $ref: '#/definitions/shared.ProblemDetailsExtendend'
+        "404":
+          description: Role not found
+          schema:
+            $ref: '#/definitions/shared.ProblemDetails'
+        "409":
+          description: Invalid Password or Email already used
+          schema:
+            $ref: '#/definitions/shared.ProblemDetails'
+        "500":
+          description: Server failed to provide an valid response
+          schema:
+            $ref: '#/definitions/shared.ProblemDetails'
+      summary: Register an access key to obtain a `profileId`, which allows you to
+        create a profile on the platform.
+      tags:
+      - Internal
   /profiles:
     post:
       consumes:
